Now accounts for Chrome's hate of audio

--- a/HP Labs Main Twine and JS Projects/mdfewkes/Tp.html
+++ b/HP Labs Main Twine and JS Projects/mdfewkes/Tp.html
@@ -163,6 +163,7 @@
 	function mouseDown(evt) {
 		calculateMousePos(evt);
 		mousePressed = true;
+		context.resume();
 	}
 
 	function mouseUp(evt) {
