--- a/HP Labs Main Twine and JS Projects/mdfewkes/Fl.html
+++ b/HP Labs Main Twine and JS Projects/mdfewkes/Fl.html
@@ -32,6 +32,7 @@
 	var volume = context.createGain();
 	pitch.type = 'triangle';
 	pitch.frequency.setValueAtTime(880, context.currentTime);
+	volume.gain.setValueAtTime(0, context.currentTime + 0.001);
 
 	pitch.connect(volume);
 	volume.connect(context.destination);
@@ -134,6 +135,7 @@
 	function mouseDown(evt) {
 		calculateMousePos(evt);
 		mousePressed = true;
+		context.resume();
 	}
 
 	function mouseUp(evt) {
