--- a/HP Labs Main Twine and JS Projects/mdfewkes/Tb.html
+++ b/HP Labs Main Twine and JS Projects/mdfewkes/Tb.html
@@ -140,6 +140,7 @@
 	function mouseDown(evt) {
 		calculateMousePos(evt);
 		mousePressed = true;
+		context.resume();
 	}
 
 	function mouseUp(evt) {
