Expanding office area into 4 adjacent parts connected by central kitchen

--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -401,26 +401,26 @@ Whether the instinct is right, or whether this is a trap you&#39;re giving in to
 
 You appear to be alone. You&#39;re no more craving other people than food, not a hint of loneliness here, just solitude.
 
-Do you step forward on the path, or take a moment to rest and breath it in?</tw-passagedata><tw-passagedata pid="15" name="officeStart" tags="wrongVO" position="1640,547" size="100,100">These areas are not yet fleshed out, but just navigation is started.
+Do you step forward on the path, or take a moment to rest and breath it in?</tw-passagedata><tw-passagedata pid="15" name="officeStart" tags="wrongVO" position="1751.6666666666665,540.3333333333334" size="100,100">You&#39;re standing at the central kitchen area of an office.
 
-This office area might have a blended Apple/MS or trendy startup vibe. Lots of office plants.
+[[check the vending machines-&gt;vendingMachines]]
 
-[[go north to underground area carved into mountain-&gt;underground]]
+[[enter the door to your left, labeled Toy Room-&gt;officeNToyRoom]]
 
-[[go west to library-&gt;library]]
+[[head to your right, towards the hexagonal cubicles-&gt;cubicles]]
 
-[[go south to fenced garden maze-&gt;garden]]
+[[step straight ahead into the lushly vegetated courtyard-&gt;courtyard]]
 
-[[go east to science lab-&gt;lab]]
+&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;These areas are not yet fleshed out, but just navigation is started. This office area might have a blended Apple/MS or trendy startup vibe. Lots of office plants.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="16" name="underground" tags="" position="1731.6666666666667,246.33333333333331" size="100,100">You hear clicks of a ratchet, swaying chain links, and low pitch rumble of steel on tile as the soda machine slides aside, revealing an elevator entrance.
 
-&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;These areas are not yet fleshed out, but just navigation is started. This office area might have a blended Apple/MS or trendy startup vibe. Lots of office plants.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="16" name="underground" tags="" position="1635,413" size="100,100">[[Go up into distant future tower-&gt;futureTower]]</tw-passagedata><tw-passagedata pid="17" name="library" tags="" position="1455,552" size="100,100">was thinking very large library, but maybe more a messy used bookstore horading vibe
-[[Enter book world-&gt;insideBook]]</tw-passagedata><tw-passagedata pid="18" name="garden" tags="" position="1641,692" size="100,100">Hedge maze?
+[[Step inside the elevator (to distant future tower)-&gt;futureTower]]</tw-passagedata><tw-passagedata pid="17" name="library" tags="" position="1395,538.6666666666666" size="100,100">was thinking very large library, but maybe more a messy used bookstore horading vibe
+[[Enter book world-&gt;insideBook]]</tw-passagedata><tw-passagedata pid="18" name="garden" tags="" position="1732.6666666666667,847" size="100,100">Hedge maze?
 Classical statues
 
-[[Go to graveyard area-&gt;graveyard]]</tw-passagedata><tw-passagedata pid="19" name="lab" tags="" position="1866,560" size="100,100">Science lab, chemicals and inventions, like a hospital area
+[[Go to graveyard area-&gt;graveyard]]</tw-passagedata><tw-passagedata pid="19" name="lab" tags="" position="2106,558.3333333333334" size="100,100">Science lab, chemicals and inventions, like a hospital area
 
-[[Time machine to 1990 office-&gt;backInTime]]</tw-passagedata><tw-passagedata pid="20" name="graveyard" tags="" position="1641,842" size="100,100">dark, Bloodborne-ish, feels long ago</tw-passagedata><tw-passagedata pid="21" name="insideBook" tags="" position="1298,553" size="100,100">World inside a book, myst inspired but with its own twist</tw-passagedata><tw-passagedata pid="22" name="futureTower" tags="" position="1626,272" size="100,100">overlooking city in all directions
-maybe only see city here with glasses off?</tw-passagedata><tw-passagedata pid="23" name="backInTime" tags="" position="2005,565" size="100,100">1990 version of main office area, start by hearing a fax?</tw-passagedata><tw-passagedata pid="24" name="playerPath2-teleporter" tags="" position="159,58" size="100,100">A loud hum fills your ears. It would hurt if it went on longer, but it&#39;s just long enough to tense up reflexively, as if you could somehow dodge it.
+[[Time machine to 1990 office-&gt;backInTime]]</tw-passagedata><tw-passagedata pid="20" name="graveyard" tags="" position="1737.6666666666667,990.3333333333334" size="100,100">dark, Bloodborne-ish, feels long ago</tw-passagedata><tw-passagedata pid="21" name="insideBook" tags="" position="1238,539.6666666666666" size="100,100">World inside a book, myst inspired but with its own twist</tw-passagedata><tw-passagedata pid="22" name="futureTower" tags="" position="1722.6666666666667,105.33333333333333" size="100,100">overlooking city in all directions
+maybe only see city here with glasses off?</tw-passagedata><tw-passagedata pid="23" name="backInTime" tags="" position="2245,563.3333333333334" size="100,100">1990 version of main office area, start by hearing a fax?</tw-passagedata><tw-passagedata pid="24" name="playerPath2-teleporter" tags="" position="159,58" size="100,100">A loud hum fills your ears. It would hurt if it went on longer, but it&#39;s just long enough to tense up reflexively, as if you could somehow dodge it.
 
 Your starched collar is warm and moist from sweat. Pulling your tie loose to breathe easier, you glance down just as the lower half of your legs are finishing phasing in. They&#39;ve always advised you not to look down, but now that you finally got the chance to do this, it&#39;s hard to look away. They warned that would probably happen, too.
 
@@ -502,7 +502,15 @@ Rows of empty cubicles are visible through a propped open door.
 
 [[Investigate the office-&gt;officeStart]]
 
-&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Your vision comes into focus. The glasses help. You\&#39;re in the reception area of an office. Rows of empty cubicles are visible through a propped open door.&#39;)&quot;&gt;</tw-passagedata></tw-storydata>
+&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Your vision comes into focus. The glasses help. You\&#39;re in the reception area of an office. Rows of empty cubicles are visible through a propped open door.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="32" name="officeNToyRoom" tags="" position="1928.333333333333,573.6666666666666" size="100,100">Prototype room
+
+[[leave to the science lab-&gt;lab]]</tw-passagedata><tw-passagedata pid="33" name="vendingMachines" tags="" position="1721.6666666666665,390.3333333333333" size="100,100">Describe what is in the vending machines
+
+[[mess with the coin return-&gt;underground]]</tw-passagedata><tw-passagedata pid="34" name="cubicles" tags="" position="1566.6666666666665,568.6666666666667" size="100,100">Panels seem to be removable, with some adjacent hex cubicles showing a window exposed between them, as if for coworkers to more easily chat or check on one another during the day.
+
+[[open the unmarked double doors - west to library-&gt;library]]</tw-passagedata><tw-passagedata pid="35" name="courtyard" tags="" position="1751.6666666666665,690.3333333333334" size="100,100">A net mesh hangs overhead, as if to keep birds from getting in, or maybe butterflies from getting out.
+
+[[take a closer look at the small garden-&gt;garden]]</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
